<resources>
    <!-- App Title -->
    <string name="app_name">BMI Calculator</string>
    <string name="app_title">BMI Calculator</string>
    <!-- Hints -->
    <string name="weight_hint">Weight (in kg)</string>
    <string name="height_hint">Height</string>
    <string name="height_feet_hint">Feet</string>
    <string name="height_inch_hint">Inch</string>

    <!-- Button Text -->
    <string name="calculate_bmi">Calculate BMI</string>

    <string name="overweight_message">You Are Overweight...</string>
    <string name="underweight_message">You Are Underweight...</string>
    <string name="healthy_message">You Are Healthy...</string>

</resources>
